--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body class="bg-black-background">
-    <header class="bg-cover flex pt-32 pb-12 px-12 w-full bg-no-repeat " style="background-image: url(img/Background.png);">
+    <header class="bg-cover flex pt-32 pb-12 px-12 w-full bg-no-repeat "
+        style="background-image: url(img/Background.png);">
         <div class="flex flex-col w-[35%] items-center">
             <h1 class="font-sans text-white-main text-center font-bold text-xl mb-4">
                 Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
@@ -32,14 +33,98 @@
                 outros planos.</p>
         </div>
     </header>
-    <section class="py-24 px-32 w-full flex items-center">
-        <img src="./img/Pixel True Mockup 1.png" alt="" class="w-120 mr-16">
-        <div>
-            <h2 class="text-white-main font-bold text-3xl mb-2">Assista do seu jeito</h2>
-            <p class="text-white-secondary opacity-80">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de 
-                cursos não para de crescer.</p>
-        </div>
-    </section>
+    <main>
+        <section class="py-24 px-32 w-full flex items-center">
+            <img src="./img/Pixel True Mockup 1.png" alt="" class="w-120 mr-16">
+            <div>
+                <h2 class="text-white-main font-bold text-3xl mb-2">Assista do seu jeito</h2>
+                <p class="text-white-secondary opacity-80">Aproveite a tela grande da TV ou assista no tablet, laptop,
+                    celular e outros aparelhos. Nossa seleção de
+                    cursos não para de crescer.</p>
+            </div>
+        </section>
+
+        <section class="py-24 px-32 w-full flex items-center">
+            <div class="flex flex-col gap-4">
+                <p class="text-white-secondary opacity-80 mr-16">
+                    Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
+                    tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a class="bg-blue-button text-white-main text-center rounded-lg p-4 h-14 w-1/3
+                transition-all hover:scale-[1.02] active:ring-2 ring-blue-button ring-offset-2 ring-offset-black-background"
+                    href="https://www.alura.com.br/">
+                    Assine o Combo+
+                </a>
+            </div>
+            <img src="./img/Telas.png" alt="Telas do Alura Plus e do Alura Língua" class="w-120">
+        </section>
+
+        <section class="py-24 px-32 w-full flex items-center">
+            <img src="./img/Notebook.png" alt="Notebook com a tela de um curso da Alura" class="w-120 mr-16">
+            <div>
+                <h2 class="text-white-main font-bold text-3xl mb-2">Baixe seus cursos</h2>
+                <p class="text-white-secondary opacity-80">Baixe e assista quando e onde quiser. Assim, seus favoritos
+                    estão sempre com você, até mesmo sem internet.</p>
+            </div>
+        </section>
+
+        <section class="py-24 px-32 flex flex-col items-center">
+            <h2 class="text-white-main text-3xl font-bold mb-10">Disponível nos seus dispositivos favoritos</h2>
+
+            <ul class="flex">
+
+                <li class="flex flex-col items-center">
+                    <img src="img/tv.png" alt="">
+                    <h3 class="text-white-main font-bold text-2xl">TV</h3>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="img/computador.png" alt="">
+                    <h3 class="text-white-main font-bold text-2xl">Computadores</h3>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="img/celular.png" alt="">
+                    <h3 class="text-white-main font-bold text-2xl">Celulares e tablets</h3>
+                </li>
+
+            </ul>
+
+        </section>
+    </main>
+
+    <footer class="flex flex-col items-center px-32 py-20 gap-6">
+        <img src="img/Logo.png" alt="Logomarca da Alura" class="w-24 mb-4">
+
+        <ul class="flex gap-4">
+            <li class="text-white-main text-sm">
+                <a href="" class="hover:underline active:text-blue-button">Idioma</a>
+            </li>
+            <li class="text-white-main text-sm">
+                <a href="" class="hover:underline active:text-blue-button">Dispositivos compatíveis</a>
+            </li>
+            <li class="text-white-main text-sm">
+                <a href="" class="hover:underline active:text-blue-button">Contrato de assinatura</a>
+            </li>
+            <li class="text-white-main text-sm">
+                <a href="" class="hover:underline active:text-blue-button">Politica de privacidade</a>
+            </li>
+            <li class="text-white-main text-sm">
+                <a href="" class="hover:underline active:text-blue-button">Proteção de dados no Brasil</a>
+            </li>
+            <li class="text-white-main text-sm">
+                <a href="" class="hover:underline active:text-blue-button">Anúncios personalizados</a>
+            </li>
+            <li class="text-white-main text-sm">
+                <a href="" class="hover:underline active:text-blue-button">Ajuda</a>
+            </li>
+        </ul>
+
+        <p class="text-gray-secondary text-xs text-center">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga.
+            Conteúdo sujeito a disponibilidade.</p>
+        <p class="text-gray-secondary text-xs text-center">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é
+            comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo -
+            SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 
 </html>
